# dcloud_storage

./: Anchor.toml  package-lock.json
app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: FileList.tsx  FileUpload.tsx  StorageStats.tsx  WalletButton.tsx  WalletProvider.tsx
app/components/layout/: Header.tsx
app/components/storage/: FileList.tsx  FileUpload.tsx  StorageInitializer.tsx  StorageStats.tsx
app/components/wallet/: WalletProvider.tsx
app/hooks/: useStorageProgram.ts  useToast.ts  useWalletAdapter.ts
app/lib/: anchor-setup.ts  idl.json
app/lib/anchor/: setup.ts
app/lib/idl/: dcloud_storage.json
app/lib/ipfs/: client.ts  upload.ts
app/lib/types/: dcloud_storage.ts
app/lib/utils/: constants.ts
app/patches/: electron-fetch+1.9.1.patch
app/types/: storage.ts
programs/dcloud_storage/: Cargo.toml
programs/dcloud_storage/src/: lib.rs
tests/: dcloud_storage.ts
