[package]
name = "dcloud_storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dcloud_storage"

[features]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }